# CHARIS

./: CLAUDE.md  PRD.txt  README.ko.md  README.md  main.py  pyproject.toml  requirements.txt  skills-lock.json
.taskmaster/: config.json  state.json
backend/: __init__.py  main.py
backend/api/v1/: __init__.py  dna.py  scan.py
backend/models/: outfit.py  style_dna.py  vision.py
backend/services/: body_shape_analyzer.py  outfit_axes_estimator.py  tpo_scorer.py  vision_analyzer.py  vision_axes_mapper.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/v1/dna/analyze-body/: route.ts
frontend/app/api/v1/dna/analyze-color/: route.ts
frontend/app/api/v1/scan/analyze/: route.ts
frontend/app/closet/: page.tsx
frontend/app/dna/: page.tsx
frontend/app/mirror/: page.tsx
frontend/app/scan/: page.tsx
frontend/app/tpo/: page.tsx
frontend/components/dna/: BodyVisualizer.tsx  ColorPalette.tsx  GraceGoal.tsx
frontend/components/mirror/: GracefulEditPanel.tsx  SilhouetteMirror.tsx
frontend/components/navigation/: BottomNav.tsx
frontend/components/scan/: AnalysisLoader.tsx  CameraGuide.tsx  VisionPopup.tsx
frontend/components/tpo/: AxisScoreBar.tsx  CoachingCard.tsx  ScoreBadge.tsx  StyleRadarChart.tsx
frontend/lib/: api.ts  clothing-scale.ts  dna-store.ts  scan-store.ts
frontend/types/: dna.ts  scan.ts  tpo.ts
